Bug 64637 - FILEOPEN RTF General I/O error when opening OCR-generated file
Summary: FILEOPEN RTF General I/O error when opening OCR-generated file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2013-05-15 13:52 UTC by Peter
Modified: 2015-12-17 12:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
some.rtf (10.44 KB, application/rtf)
2013-05-15 13:52 UTC, Peter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter 2013-05-15 13:52:29 UTC
Created attachment 79348 [details]
some.rtf

Attempt to open attached rtf file ends with general I/O error when opening a RTF file. This is reproducible with 4.0.2.2 as well. Reproduced on Gentoo Linux.
Comment 1 ign_christian 2013-05-16 05:40:00 UTC
reproducible on LO 4.0.3.3 (Win7 Home Premium 32bit)

File can be previewed from Windows Explorer
Comment 2 ign_christian 2013-05-16 05:40:59 UTC
*** Bug 64656 has been marked as a duplicate of this bug. ***
Comment 3 Urmas 2013-05-16 06:22:07 UTC
The error is apparently caused by this fragment:

{\upr{\company}
{\*\ud\uc0{\company{\uc1}
}
}
}
Comment 4 Urmas 2013-05-25 20:38:57 UTC
Apparently there is a problem in /pub/lobuild/libreoffice/writerfilter/source/rtftok/rtfdocumentimpl.cxx when property is added twice, first for ANSI, second for Unicode:

xUserDefinedProperties->addProperty(aName, beans::PropertyAttribute::REMOVABLE,
    uno::makeAny(m_aStates.top().aDestinationText.makeStringAndClear()));
Comment 5 Miklos Vajna 2013-07-23 09:56:37 UTC
This worked in LO 3.4.
Comment 6 Commit Notification 2013-07-23 10:49:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb67e709b70919efb41ec41e93dd92953dc6a003

fdo#64637 RTF import: handle multiple RTF_COMPANY



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Miklos Vajna 2013-07-23 13:53:24 UTC
-4-1 review: https://gerrit.libreoffice.org/5049
Comment 8 Commit Notification 2013-07-23 19:43:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=58a285d8d504c5ae952d314238dbbaa873b51db7&h=libreoffice-4-1

fdo#64637 RTF import: handle multiple RTF_COMPANY


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 12:14:23 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]